feat: add swaggo comment in all handlers
